ki-selfhost-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ki-selfhost-operator
  labels:
    app: ki-selfhost-operator
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: ki-selfhost-operator
  replicas: 1
  template:
    metadata:
      labels:
        app: ki-selfhost-operator
    spec:
      containers:
        - name: ki-selfhost-operator
          image: docker.libsdev.k-int.com/knowledgeintegration/ki-selfhost-operator:native-next
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 768Mi
            limits:
              memory: 2Gi
      serviceAccountName: cheetah-agent-sa
