ki-selfhost-operator/templates/08-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ki-selfhost-operator
  labels:
    app.kubernetes.io/name: ki-selfhost-operator
spec:
  type: "ClusterIP"
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ki-selfhost-operator
