ki-selfhost-operator/templates/070-kong_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: folio1-gateway
spec:
  gatewayClassName: ki-selfhost-gw-class
  listeners:
    - name: http
      protocol: HTTP
      port: 81
    #  hostname: "bootstrap.localtest.me"
    #- name: http-modules
    #  protocol: HTTP
    #  port: 81
    #  hostname: "*.api.localtest.me"
