ki-selfhost-operator/templates/kong_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: folio1-gateway
spec:
  gatewayClassName: ki-selfhost-gw-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "test1.localtest"
