ki-selfhost-operator/templates/09-http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
  annotations:
    konghq.com/plugins: kong-ki-selfhost-router
spec:
  parentRefs:
    - name: ki-selfhost-gw-class
  hostnames:
    - "test1.localtest"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: my-service
          port: 80
