ki-selfhost-operator/templates/10-modules_http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cheetah-modules-http-route
  annotations:
    konghq.com/plugins: kong-ki-selfhost-router
spec:
  parentRefs:
    - name: ki-selfhost-gw-class
  hostnames:
    - "*.api.localtest.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ki-selfhost-operator
          port: 8080
